--- a/index.html
+++ b/index.html
@@ -10,29 +10,33 @@
   <title>Cat Clicker Premium</title>
 </head>
 <body>
-  <div id="main">
-    <div class="container-fluid">
+  <main class="container-fluid">
+    <header>
       <div class="row">
-        <div class="col-sm-8">
-          <div id="cat-clicker">
-            <h1 id="cat-counter" class="text-center"></h1>
-            <img id="cat-image" class="img-responsive img-rounded" src="">
-            <h2 id="cat-name" class="text-center"></h2>
-          </div>
-        </div>
-        <div class="col-sm-4">
-          <table id="cat-table" class="table table-hover">
-            <!--Generated with JS-->
-          </table>
+        <div class="col-sm-12">
+          <h1>Cat Clicker</h1>
         </div>
       </div>
+    </header>
+    <div class="row">
+      <div class="col-sm-8">
+        <div id="cat-clicker">
+          <h1 id="cat-counter" class="text-center"></h1>
+          <img id="cat-image" class="img-responsive img-rounded" src="">
+          <h2 id="cat-name" class="text-center"></h2>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <table id="cat-table" class="table table-hover">
+          <!--Generated with JS-->
+        </table>
+      </div>
     </div>
-  </div>
+  </main>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   <script src="js/model.js"></script>
   <script src="js/view.js"></script>
   <script src="js/octopus.js"></script>
-
 </body>
 </html>
