fix: Change cat table title

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div class="col-sm-4">
-        <h2>Pick a Kitty:</h1>
+        <h2 class="text-center">Pick a Cat</h1>
         <table id="cat-table" class="table table-hover">
           <!--Generated with JS-->
         </table>
