--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
   <title>Cat Clicker Premium</title>
 </head>
 <body>
-  <main class="container-fluid">
-    <header>
-      <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container-fluid">
-          <div class="navbar-header">
-            <a href="#" class="navbar-brand navbar-center">Cat Clicker</a>
-          </div>
+  <header>
+    <nav class="navbar navbar-default navbar-fixed-top">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a href="#" class="navbar-brand navbar-center">Cat Clicker</a>
         </div>
-      </nav>
-    </header>
+      </div>
+    </nav>
+  </header>
+  <main class="container-fluid">
     <div class="row">
       <div class="col-sm-8">
         <div id="cat-clicker">
-          <h2 id="cat-counter" class="text-center"></h2>
-          <img id="cat-image" class="img-responsive img-rounded" src="">
-          <h2 id="cat-name" class="text-center"></h2>
+          <h2 id="cat-counter" class="text-center">0</h2>
+          <img id="cat-image" class="img-responsive img-rounded" src="#" alt="Currently selected cat">
+          <h2 id="cat-name" class="text-center">Cat Name</h2>
         </div>
       </div>
       <div class="col-sm-4">
