feat: Add cat levels based on click count

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <h2 id="cat-counter" class="text-center" data-bind="text: clickCount">0</h2>
           <img id="cat-image" class="img-responsive img-rounded" data-bind="click: incrementCounter, attr: {src: imgSrc}" src="#">
           <h2 id="cat-name" class="text-center" data-bind="text: name">Cat Name</h2>
+          <p class="text-center" data-bind="text: level"></p>
         </div>
       </div>
       <div class="col-sm-4">
