--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
       <div class="col-sm-4">
         <h2 class="text-center">Pick a Cat</h2>
         <table id="cat-table" class="table table-hover">
-          <!--Generated with JS-->
+          <tbody data-bind="foreach: nicknames">
+            <td data-bind="text: $data"></td>
+          </tbody>
         </table>
       </div>
     </div>
   </main>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   <script src="js/app.js"></script>
