--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
   <main class="container-fluid">
     <div class="row">
       <div class="col-sm-8">
-        <div id="cat-clicker">
-          <h2 id="cat-counter" class="text-center" data-bind="text: currentCat().clickCount">0</h2>
-          <img id="cat-image" class="img-responsive img-rounded" data-bind="click: incrementCounter, attr: {src: currentCat().imgSrc}" src="#">
-          <h2 id="cat-name" class="text-center" data-bind="text: currentCat().name">Cat Name</h2>
-          <p class="text-center" data-bind="text: currentCat().level"></p>
+        <div id="cat-clicker" data-bind="with: currentCat">
+          <h2 id="cat-counter" class="text-center" data-bind="text: clickCount">0</h2>
+          <img id="cat-image" class="img-responsive img-rounded" data-bind="click: $parent.incrementCounter, attr: {src: imgSrc}" src="#">
+          <h2 id="cat-name" class="text-center" data-bind="text: name">Cat Name</h2>
+          <p class="text-center" data-bind="text: level"></p>
         </div>
       </div>
       <div class="col-sm-4">
